[metadata]
name = djutils
version = 1.0.17
author = Manuel Stingl
author_email = opensource@voltane.eu
description = Utilities for use with the django web framework
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU LGPLv2.1
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Framework :: Django
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 4.0
url = https://github.com/Voltane-EU/djutils

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
install_requires =
    django >= 2.0
    Pillow >= 6.0
